LEPL-23: промежуточные изменения по таске. Переделал AdminCourseController.
